--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body class="bg-gradient-to-r from-black/95 to-black relative font-font2">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </body>
 </html>
