--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rajesh's Portofolio</title>
   </head>
-  <body class="bg-gradient-to-r from-black/95 to-black relative font-font2">
+  <body class="bg-gradient-to-r from-black/95 to-black relative font-customPD ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
