--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rajesh X Dev</title>
+    <title>rajesh ande</title>
   </head>
   <body class="bg-grid-lines bg-black bg-grid relative font-customPD">
     <div id="root"></div>
